--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -4,14 +4,24 @@ header {
   font-weight: bold;
   color: MediumAquamarine;
   display: flex;
-  width: 100%;
+
   padding-bottom: 10px;
   border-bottom: 1px solid black;
-  align-items: flex-end;
+  align-items: center;
+
 }
 
 .logo {
-  padding-right: 10px;
+  display: flex;
+  flex-grow: 1;
+  align-items: center;
+
+}
+
+.logo img {
+  margin-right: 15px;
+  width: 70px;
+  height: 60px;
 }
 
 nav {
@@ -20,9 +30,11 @@ nav {
 }
 
 nav span {
+  display: inline-block;
+
   width: 100px;
   height: 50px;
-  background-color: pink;
+
   text-align: center;
 
 }
