--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,21 +1,22 @@
+html body {
+  height: 100vh;
+}
+
 header {
   font-family: Verdana;
   font-size: 14px;
   font-weight: bold;
   color: MediumAquamarine;
   display: flex;
-
   padding-bottom: 10px;
   border-bottom: 1px solid black;
   align-items: center;
-
 }
 
 .logo {
   display: flex;
   flex-grow: 1;
   align-items: center;
-
 }
 
 .logo img {
@@ -26,15 +27,33 @@ header {
 
 nav {
   display: flex;
-
 }
 
 nav span {
   display: inline-block;
-
   width: 100px;
   height: 50px;
-
   text-align: center;
+  font-family: Verdana;
+  font-size: 14px;
+  font-weight: bold;
+}
 
+.container {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  border: 1px solid black;
+}
+
+.column.large {
+  width: 630px;
+}
+
+.column.medium {
+  width: 300px;
+}
+
+.column.small {
+  width: 240px;
 }
